fixed an issue in the package.json there was a missing comma; app displays once logged in and loggs out

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -98,14 +98,19 @@ input {
 }
 
 .nav {
+  display: flex;
+  justify-content: left;
+  width: 100%;
+
+}
+
+header {
+  border-bottom: white;
+  width: 100%;
   background-image: linear-gradient(
     to right,
     rgb(126, 144, 219),
     rgb(234, 115, 118)
   );
   height: fit-content;
-}
-
-header {
-  border-bottom: white;
 }
