--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -7,6 +7,7 @@
 .gridCard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  margin: 7em auto;
   /* justify-items: center; */
   align-content: center;
   /* place-items: center; */
