pawprint is back on login and home page

--- a/frontend/src/Components/auth/Login.css
+++ b/frontend/src/Components/auth/Login.css
@@ -19,7 +19,7 @@
   background-color: rgb(215, 221, 234);
   min-height: 120vh;
   margin: auto;
-  background-image: url("/img/pawprint.png");
+  background-image: url("/pawprint.png");
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
