--- a/frontend/src/Components/auth/Login.css
+++ b/frontend/src/Components/auth/Login.css
@@ -1,4 +1,3 @@
-
 .goToRegisterPage {
   text-decoration: none;
   color: black;
@@ -26,8 +25,6 @@
   /* opacity: .5; */
 }
 
-
-
 .question {
   border-radius: 50%;
   background-color: rgb(208, 208, 208);
@@ -45,4 +42,28 @@
   border-radius: 2%;
   margin: 2em auto;
   font-size: 1em;
+}
+
+/*------------SUBSCRIPTION PAGE------- */
+ul {
+  list-style-type: circle;
+  text-align: left;
+}
+
+.subscriptionheader {
+  text-align: left;
+  font-weight: bold;
+  margin-top: 2em;
+  margin-bottom: 0em;
+}
+
+.subscriptionheaderdetails {
+  text-align: left;
+  font-weight: bold;
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
+
+.subscritioninputs {
+  display: flexbox;
 }
