--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -23,3 +23,14 @@
   height: 200px;
   width: 200px;
 }
+
+@media (max-width: 375px) {
+  .gridCard {
+    display: inline;
+    padding: 2.5rem 0;
+  }
+
+  .card {
+    margin: 2.5rem 0;
+  }
+}
